// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function integration tests basic-error.js should match snapshot 1`] = `
Object {
  "body": Object {},
  "headers": Object {
    "connection": "close",
    "content-type": "text/html; charset=utf-8",
    "x-powered-by": "Express",
  },
  "statusCode": 500,
  "text": "Error: I'm throwing ...",
  "type": "text/html",
}
`;

exports[`Function integration tests basic-twiml.js should match snapshot 1`] = `
Object {
  "body": Object {},
  "headers": Object {
    "connection": "close",
    "content-length": "89",
    "content-type": "text/xml; charset=utf-8",
    "etag": "W/\\"59-7CipVOZqIC97jb+O3eEh9E+IIG0\\"",
    "x-powered-by": "Express",
  },
  "statusCode": 200,
  "text": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?><Response><Message>Hello World</Message></Response>",
  "type": "text/xml",
}
`;
